# rag-multimodal-audit-analysis

./: .gitignore
audit_rag/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quickstart.py
audit_rag/data/chroma_db/: chroma.sqlite3
audit_rag/scripts/: ingest.py
audit_rag/src/audit_rag/: api.py  config.py  evaluator.py  extractor.py  generator.py  retriever.py  vectorstore.py
audit_rag/tests/: conftest.py  test_rag.py
